--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
         "@radix-ui/react-avatar": "^1.0.4",
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-dropdown-menu": "^2.0.6",
+        "@radix-ui/react-hover-card": "^1.0.7",
         "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-progress": "^1.0.3",
         "@radix-ui/react-scroll-area": "^1.0.5",
         "@radix-ui/react-slot": "^1.0.2",
@@ -36,7 +38,7 @@
         "eslint-config-next": "13.5.4",
         "postcss": "^8.4.31",
         "prettier": "^3.0.3",
-        "prettier-plugin-tailwindcss": "^0.5.5",
+        "prettier-plugin-tailwindcss": "^0.5.6",
         "tailwindcss": "^3.3.3"
     }
 }
