--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@hookform/resolvers": "^3.3.2",
         "@radix-ui/react-avatar": "^1.0.4",
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -26,10 +27,12 @@
         "react": "^18.2.0",
         "react-alice-carousel": "^2.8.0",
         "react-dom": "^18",
+        "react-hook-form": "^7.47.0",
         "react-redux": "^8.1.3",
         "redux": "^4.2.1",
         "tailwind-merge": "^1.14.0",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.22.4"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.16",
