--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "react-alice-carousel": "^2.8.0",
         "react-dom": "^18",
         "react-hook-form": "^7.47.0",
+        "react-icons": "^4.11.0",
         "react-redux": "^8.1.3",
         "redux": "^4.2.1",
         "tailwind-merge": "^1.14.0",
