--- a/package.json
+++ b/package.json
@@ -18,28 +18,34 @@
         "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-progress": "^1.0.3",
         "@radix-ui/react-scroll-area": "^1.0.5",
+        "@radix-ui/react-separator": "^1.0.3",
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-toast": "^1.1.5",
+        "@radix-ui/react-tooltip": "^1.0.7",
         "@reduxjs/toolkit": "^1.9.7",
+        "add": "^2.0.6",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
+        "eslint-plugin-react-hooks": "^5.0.0-canary-ce2bc58a9-20231102",
         "lucide-react": "^0.284.0",
-        "next": "13.5.4",
+        "next": "^14.0.1",
         "react": "^18.2.0",
         "react-alice-carousel": "^2.8.0",
-        "react-dom": "^18",
+        "react-dom": "^18.2.0",
         "react-hook-form": "^7.47.0",
         "react-icons": "^4.11.0",
         "react-redux": "^8.1.3",
         "redux": "^4.2.1",
+        "shadcn-ui": "^0.4.1",
         "tailwind-merge": "^1.14.0",
         "tailwindcss-animate": "^1.0.7",
+        "tooltip": "^1.6.1",
         "zod": "^3.22.4"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.16",
         "eslint": "^8",
-        "eslint-config-next": "13.5.4",
+        "eslint-config-next": "^14.0.1",
         "postcss": "^8.4.31",
         "prettier": "^3.0.3",
         "prettier-plugin-tailwindcss": "^0.5.6",
