--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
         "eslint-plugin-react-hooks": "^5.0.0-canary-ce2bc58a9-20231102",
+        "html-react-parser": "^5.0.6",
         "lucide-react": "^0.284.0",
         "next": "^14.0.1",
         "react": "^18.2.0",
@@ -34,8 +35,11 @@
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.47.0",
         "react-icons": "^4.11.0",
+        "react-markdown": "^9.0.0",
         "react-redux": "^8.1.3",
         "redux": "^4.2.1",
+        "rehype-raw": "^7.0.0",
+        "remark-gfm": "^4.0.0",
         "shadcn-ui": "^0.4.1",
         "tailwind-merge": "^1.14.0",
         "tailwindcss-animate": "^1.0.7",
@@ -43,6 +47,7 @@
         "zod": "^3.22.4"
     },
     "devDependencies": {
+        "@tailwindcss/typography": "^0.5.10",
         "autoprefixer": "^10.4.16",
         "eslint": "^8",
         "eslint-config-next": "^14.0.1",
