--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "html-react-parser": "^5.0.6",
         "lucide-react": "^0.284.0",
         "next": "^14.0.1",
+        "plyr-react": "^5.3.0",
         "react": "^18.2.0",
         "react-alice-carousel": "^2.8.0",
         "react-dom": "^18.2.0",
