--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.47.0",
         "react-icons": "^4.11.0",
+        "react-infinite-scroll-component": "^6.1.0",
+        "react-intersection-observer": "^9.5.3",
         "react-markdown": "^9.0.0",
         "react-redux": "^8.1.3",
         "redux": "^4.2.1",
