--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "rehype-raw": "^7.0.0",
         "remark-gfm": "^4.0.0",
         "shadcn-ui": "^0.4.1",
+        "swiper": "^11.0.4",
         "tailwind-merge": "^1.14.0",
         "tailwindcss-animate": "^1.0.7",
         "tooltip": "^1.6.1",
