--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "react-intersection-observer": "^9.5.3",
         "react-markdown": "^9.0.0",
         "react-redux": "^8.1.3",
+        "react-scroll": "^1.9.0",
         "redux": "^4.2.1",
         "rehype-raw": "^7.0.0",
         "remark-gfm": "^4.0.0",
