--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "rehype-raw": "^7.0.0",
         "remark-gfm": "^4.0.0",
         "shadcn-ui": "^0.4.1",
+        "sharp": "^0.32.6",
         "swiper": "^11.0.4",
         "tailwind-merge": "^1.14.0",
         "tailwindcss-animate": "^1.0.7",
