--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@radix-ui/react-toast": "^1.1.5",
         "@radix-ui/react-tooltip": "^1.0.7",
         "@reduxjs/toolkit": "^1.9.7",
+        "@tailwindcss/forms": "^0.5.7",
         "@vercel/analytics": "^1.1.1",
         "add": "^2.0.6",
         "class-variance-authority": "^0.7.0",
