--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
         "eslint-plugin-react-hooks": "^5.0.0-canary-ce2bc58a9-20231102",
+        "firebase": "^10.7.0",
         "html-react-parser": "^5.0.6",
+        "localforage": "^1.10.0",
         "lucide-react": "^0.284.0",
         "next": "^14.0.1",
         "next-themes": "^0.2.1",
@@ -46,8 +48,10 @@
         "react-infinite-scroll-component": "^6.1.0",
         "react-intersection-observer": "^9.5.3",
         "react-markdown": "^9.0.0",
+        "react-notifications": "^1.7.4",
         "react-redux": "^8.1.3",
         "react-scroll": "^1.9.0",
+        "react-toastify": "^9.1.3",
         "redux": "^4.2.1",
         "rehype-raw": "^7.0.0",
         "remark-gfm": "^4.0.0",
