--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "react-intersection-observer": "^9.5.3",
         "react-markdown": "^9.0.0",
         "react-notifications": "^1.7.4",
+        "react-query": "^3.39.3",
         "react-redux": "^8.1.3",
         "react-scroll": "^1.9.0",
         "react-toastify": "^9.1.3",
